# RBS

./: .gitignore  ABIS_OVER_IP.md  CMakeLists.txt  OPEN5GS_LINUX_QUICKSTART.md  README.md  ROADMAP.md  WINDOWS_USRSCTP_BACKEND.md  check_includes.py  diag_asn1.sh  fix_asn1_encoding.py  fix_msvc_asn1.py  fix_protocol_ie_field.py  fix_static_redefs.py  fix_x2ap_c_includes.py  fix_x2ap_cycles.py  fix_x2ap_pdu_alias.py  gen_asn1.sh  gen_nbap.sh  rbs.conf
.github/: copilot-instructions.md
.github/agents/: rbs-dev.agent.md
.github/prompts/: gen-asn1.prompt.md
.github/workflows/: build.yml
asn1/nbap/: NBAP-CommonDataTypes.asn  NBAP-Constants.asn  NBAP-Containers.asn  NBAP-IEs.asn  NBAP-PDU-Contents.asn  NBAP-PDU-Descriptions.asn
asn1/s1ap/: S1AP-CommonDataTypes.asn  S1AP-Constants.asn  S1AP-Containers.asn  S1AP-IEs.asn  S1AP-PDU-Contents.asn  S1AP-PDU-Descriptions.asn
asn1/x2ap/: X2AP-CommonDataTypes.asn  X2AP-Constants.asn  X2AP-Containers.asn  X2AP-IEs.asn  X2AP-PDU-Contents.asn  X2AP-PDU-Descriptions.asn
build-asn1/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RBS.slnx  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  rbs_asn1_nbap.vcxproj  rbs_asn1_nbap.vcxproj.filters  rbs_asn1_s1ap.vcxproj  rbs_asn1_s1ap.vcxproj.filters  rbs_asn1_x2ap.vcxproj  rbs_asn1_x2ap.vcxproj.filters  rbs_common.vcxproj  rbs_common.vcxproj.filters  rbs_gsm.vcxproj  rbs_gsm.vcxproj.filters  rbs_hal.vcxproj  rbs_hal.vcxproj.filters  rbs_lte.vcxproj  rbs_lte.vcxproj.filters  rbs_node.vcxproj  rbs_node.vcxproj.filters  rbs_oms.vcxproj  rbs_oms.vcxproj.filters  rbs_umts.vcxproj  rbs_umts.vcxproj.filters
build-asn1/Testing/Temporary/: CTestCostData.txt  LastTest.log.tmpdf4ea
build-asn1/rbs_node.dir/Debug/: rbs_node.exe.recipe
build-asn1/rbs_umts.dir/Debug/: rbs_umts.lib.recipe
build-asn1/tests/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  test_abis_link.vcxproj  test_abis_link.vcxproj.filters  test_config.vcxproj  test_config.vcxproj.filters  test_gsm_phy.vcxproj  test_gsm_phy.vcxproj.filters  test_gsm_rlc.vcxproj  test_gsm_rlc.vcxproj.filters  test_gsm_rr.vcxproj  test_gsm_rr.vcxproj.filters  test_gsm_stack.vcxproj  test_gsm_stack.vcxproj.filters  test_gtp_u.vcxproj  test_gtp_u.vcxproj.filters  test_integration.vcxproj  test_integration.vcxproj.filters  test_iub_link.vcxproj  test_iub_link.vcxproj.filters  test_lte_mac.vcxproj  test_lte_mac.vcxproj.filters  test_lte_phy.vcxproj  test_lte_phy.vcxproj.filters  test_lte_rlc.vcxproj  test_lte_rlc.vcxproj.filters  test_lte_rrc.vcxproj  test_lte_rrc.vcxproj.filters  test_lte_stack.vcxproj  test_lte_stack.vcxproj.filters  test_mobility.vcxproj  test_mobility.vcxproj.filters  test_nbap_codec.vcxproj  test_nbap_codec.vcxproj.filters  test_oms.vcxproj  test_oms.vcxproj.filters  (+22 more)
fix/: fix_asn1_encoding.py  fix_msvc_asn1.py  fix_protocol_ie_field.py  fix_static_redefs.py  fix_x2ap_c_includes.py  fix_x2ap_cycles.py  fix_x2ap_pdu_alias.py  run_all.py
src/: main.cpp
src/api/: rest_server.cpp  rest_server.h  rest_validation.cpp  rest_validation.h
src/common/: config.cpp  config.h  config_snapshot.cpp  config_snapshot.h  link_controller.h  link_registry.cpp  link_registry.h  logger.h  lte_service_registry.cpp  lte_service_registry.h  mobility_manager.cpp  mobility_manager.h  pcap_writer.cpp  pcap_writer.h  sctp_socket.cpp  sctp_socket.h  son.cpp  son.h  tcp_socket.cpp  tcp_socket.h  types.h  udp_socket.cpp  udp_socket.h
src/gsm/: abis_interface.h  abis_link.cpp  abis_link.h  gprs_bssgp.cpp  gprs_bssgp.h  gprs_ns.cpp  gprs_ns.h  gsm_mac.cpp  gsm_mac.h  gsm_phy.cpp  gsm_phy.h  gsm_rlc.cpp  gsm_rlc.h  gsm_rr.cpp  gsm_rr.h  gsm_stack.cpp  gsm_stack.h  igsm_mac.h  igsm_phy.h  igsm_stack.h  ipa.h
src/hal/: rf_hardware.cpp  rf_hardware.h  rf_interface.h
src/lte/: gtp_u.cpp  gtp_u.h  ilte_mac.h  ilte_pdcp.h  ilte_phy.h  ilte_stack.h  lte_mac.cpp  lte_mac.h  lte_pdcp.cpp  lte_pdcp.h  lte_phy.cpp  lte_phy.h  lte_rlc.cpp  lte_rlc.h  lte_rrc.cpp  lte_rrc.h  lte_stack.cpp  lte_stack.h  multi_cell_model.h  s1ap_codec.cpp  s1ap_codec.h  s1ap_interface.h  s1ap_link.cpp  s1ap_link.h  volte_stub.cpp  volte_stub.h  x2ap_codec.cpp  x2ap_codec.h  x2ap_interface.h  x2ap_link.cpp  x2ap_link.h
src/nr/: f1ap_codec.cpp  f1ap_codec.h  ngap_codec.cpp  ngap_codec.h  ngap_link.cpp  ngap_link.h  nr_mac.cpp  nr_mac.h  nr_pdcp.cpp  nr_pdcp.h  nr_phy.cpp  nr_phy.h  nr_sdap.cpp  nr_sdap.h  nr_stack.cpp  nr_stack.h  xnap_codec.cpp  xnap_codec.h  xnap_link.cpp  xnap_link.h
src/oms/: alarm_correlation.cpp  alarm_correlation.h  ioms.h  oms.cpp  oms.h  policy_engine.cpp  policy_engine.h
src/umts/: iub_interface.h  iub_link.cpp  iub_link.h  iumts_mac.h  iumts_phy.h  iumts_stack.h  nbap_codec.cpp  nbap_codec.h  umts_mac.cpp  umts_mac.h  umts_phy.cpp  umts_phy.h  umts_rlc.cpp  umts_rlc.h  umts_rrc.cpp  umts_rrc.h  umts_stack.cpp  umts_stack.h
tests/: CMakeLists.txt  test_abis_ipa_golden.cpp  test_abis_link.cpp  test_config.cpp  test_csfb.cpp  test_endc.cpp  test_f1ap_codec.cpp  test_gprs_bssgp.cpp  test_gsm_phy.cpp  test_gsm_rlc.cpp  test_gsm_rr.cpp  test_gsm_stack.cpp  test_gtp_u.cpp  test_integration.cpp  test_iub_link.cpp  test_lte_ca.cpp  test_lte_mac.cpp  test_lte_measurement.cpp  test_lte_phy.cpp  test_lte_rlc.cpp  test_lte_rrc.cpp  test_lte_stack.cpp  test_lte_ul_phy.cpp  test_mobility.cpp  test_multi_cell.cpp  test_nbap_codec.cpp  test_nbap_dch.cpp  test_nbap_edch.cpp  test_ng_xn_transport.cpp  test_ngap_codec.cpp  test_nr_mac.cpp  test_nr_phy.cpp  test_nr_stack.cpp  test_oms.cpp  test_pcap_writer.cpp  test_pdcp.cpp  test_pdcp_security.cpp  test_perf_oms.cpp  test_perf_scheduler.cpp  test_pm_export.cpp  (+18 more)
tools/: abis_bpp_smoke.sh  abis_c1_smoke.sh  abis_d1_mock_smoke.sh  abis_interop_report.sh  abis_osmocom_interop_smoke.sh  check_endc_options.ps1  mock_bsc_ipa.py  perf_regression_check.py  rbs_api.ps1  rbs_api.sh  smoke_all_rat.ps1
(+338 files in other folders)
